--- a/Tadekam.html
+++ b/Tadekam.html
@@ -586,7 +586,7 @@
 										<div class="row">
 											<img src="images/home_spiritual_programs.png" alt=""/>
 										</div>
-										InConnect Workshop
+										<div class="programTitle">InConnect Workshop</div>
 										<div class="row programShortDescription">
 											A short program for orientation on the spiritual path with initiation into a powerful Guru Mantra.
 										</div>
@@ -600,7 +600,7 @@
 										<div class="row">
 											<img src="images/home_spiritual_programs.png" alt=""/>
 										</div>
-										Breaking Boundaries
+										<div class="programTitle">Breaking Boundaries</div>
 										<div class="row programShortDescription">
 											These two days courses having three levels have been carefully crafted, to unleash the spiritual potential and power that lies within every human beings and break free of physical and mental limitations.
 										</div>
@@ -614,7 +614,7 @@
 										<div class="row">
 											<img src="images/home_spiritual_programs.png" alt=""/>
 										</div>
-										Tadekam Kriyas
+										<div class="programTitle">Tadekam Kriyas</div>
 										<div class="row">(Basic and Advance)</div>
 										<div class="row programShortDescription">
 											These are very simple meditation practices, Mudras and Pranayams given by the Immortal Mahavatar Babaji directly to Guruji Naushir. 
@@ -637,7 +637,7 @@
 										<div class="row">
 											<img src="images/home_spiritual_programs.png" alt=""/>
 										</div>
-										Dhyan Shuddhi Meditation
+										<div class="programTitle">Dhyan Shuddhi Meditation</div>
 										<div class="row programShortDescription">
 											An intense Shiva centric meditation program to remove negativity through by chanting of Mantras and reciting Stotras.
 										</div>
@@ -651,7 +651,7 @@
 										<div class="row">
 											<img src="images/home_spiritual_programs.png" alt=""/>
 										</div>
-										Poornima Shanti
+										<div class="programTitle">Poornima Shanti</div>
 										<div class="row programShortDescription">
 											Full Moon meditation to draw enhanced energies from the Masters through group activity.
 										</div>
@@ -665,7 +665,7 @@
 										<div class="row">
 											<img src="images/home_spiritual_programs.png" alt=""/>
 										</div>
-										Group Chanting
+										<div class="programTitle">Group Chanting</div>
 										<div class="row programShortDescription">
 											Powerful mantras given by Mahavatar Babaji chanted in groups for enhanced energetic effect
 										</div>
@@ -715,7 +715,7 @@
 									<div class="row">
 										<img src="images/fun_connect.png" alt=""/>
 									</div>
-									Fun Connect
+									<div class="programTitle">Fun Connect</div>
 									<div class="row programShortDescription">
 										4 Years to 7 Years
 									</div>
@@ -724,7 +724,7 @@
 									<div class="row">
 										<img src="images/mind_connect.png" alt=""/>
 									</div>
-									Mind Connect
+									<div class="programTitle">Mind Connect</div>
 									<div class="row programShortDescription">
 										8 Years to 10 Years
 									</div>
@@ -733,7 +733,7 @@
 									<div class="row">
 										<img src="images/soul_connect.png" alt=""/>
 									</div>
-									Soul Connect
+									<div class="programTitle">Soul Connect</div>
 									<div class="row programShortDescription">
 										11 Years to 14 Years
 									</div>
