--- a/index.html
+++ b/index.html
@@ -55,14 +55,12 @@
 				</div>
 				<div class="col-xs-9 hamburgerMenu">
 					<button class="button navbar-toggler hamburgerButton" onclick="hamburgerOpenClicked()" type="button" data-toggle="collapse" data-target="#menuNavbar">
-						<span class="glyphicon glyphicon-menu-hamburger"></span>
-						<!-- <img src="images/menu.svg" alt=""> -->
+						<img src="images/menu.png" alt="">
 					</button>
 				</div>
 				<div class="col-xs-12 navbar-collapse collapse" id="menuNavbar" style="height:0px;">
 					<button id="buttonHamburgerClose" class="button navbar-toggler hamburgerButton" onclick="hamburgerCloseClicked()" type="button" data-toggle="collapse" data-target="#menuNavbar">
-						<span class="glyphicon glyphicon-remove-sign"></span>
-						<!-- <img src="images/close.svg" alt=""> -->
+						<img src="images/close.png" alt="">
 					</button>
 					<ul class="navbar-nav hamburgerMenuList">
 						<li class="nav-item">
