--- a/Tadekam.html
+++ b/Tadekam.html
@@ -443,7 +443,7 @@
 						<div class="col-xs-8 col-lg-8">
 							<div class="col-xs-2 col-lg-4"></div>
 							<div class="col-xs-8 col-lg-4 namePhotoHolder">
-								<img src="images/seema.jpg" alt="Seema" class="namePhoto">
+								<img src="images/seema.png" alt="Seema" class="namePhoto">
 							</div>
 							<div class="col-xs-2 col-lg-4"></div>
 						</div>
@@ -582,7 +582,7 @@
 								<div class="row programsContainerRow">
 									<div class="col-xs-12 col-lg-4 programHolder">
 										<div class="row">
-											<img src="images/home_spiritual_programs.png" alt=""/>
+											<img src="images/in_connect.png" alt=""/>
 										</div>
 										<div class="programTitle">InConnect Workshop</div>
 										<div class="row programShortDescription">
@@ -596,7 +596,7 @@
 									</div>
 									<div class="col-xs-12 col-lg-4 programHolder">
 										<div class="row">
-											<img src="images/home_spiritual_programs.png" alt=""/>
+											<img src="images/breaking_boundaries.png" alt=""/>
 										</div>
 										<div class="programTitle">Breaking Boundaries</div>
 										<div class="row programShortDescription">
@@ -610,7 +610,7 @@
 									</div>
 									<div class="col-xs-12 col-lg-4 programHolder">
 										<div class="row">
-											<img src="images/home_spiritual_programs.png" alt=""/>
+											<img src="images/tadekam_kriyas.png" alt=""/>
 										</div>
 										<div class="programTitle">Tadekam Kriyas</div>
 										<div class="row">(Basic and Advance)</div>
@@ -633,9 +633,9 @@
 								<div class="row programsContainerRow">
 									<div class="col-xs-12 col-lg-4 programHolder">
 										<div class="row">
-											<img src="images/home_spiritual_programs.png" alt=""/>
+											<img src="images/dhyaan_shuddhi.png" alt=""/>
 										</div>
-										<div class="programTitle">Dhyan Shuddhi Meditation</div>
+										<div class="programTitle">Dhyaan Shuddhi Meditation</div>
 										<div class="row programShortDescription">
 											An intense Shiva centric meditation program to remove negativity through by chanting of Mantras and reciting Stotras.
 										</div>
@@ -647,7 +647,7 @@
 									</div>
 									<div class="col-xs-12 col-lg-4 programHolder">
 										<div class="row">
-											<img src="images/home_spiritual_programs.png" alt=""/>
+											<img src="images/poornima_meditation.png" alt=""/>
 										</div>
 										<div class="programTitle">Poornima Shanti</div>
 										<div class="row programShortDescription">
@@ -661,7 +661,7 @@
 									</div>
 									<div class="col-xs-12 col-lg-4 programHolder">
 										<div class="row">
-											<img src="images/home_spiritual_programs.png" alt=""/>
+											<img src="images/group_chanting.png" alt=""/>
 										</div>
 										<div class="programTitle">Group Chanting</div>
 										<div class="row programShortDescription">
@@ -1312,6 +1312,13 @@
 											</div>
 											<div class="col-xs-1 col-lg-4"></div>
 										</div>
+										<div class="row">
+											<div class="col-xs-1 col-lg-4"></div>
+											<div class="col-xs-10 col-lg-4">
+												<img src="images/amrit.png" alt="">	
+											</div>
+											<div class="col-xs-1 col-lg-4"></div>
+										</div>
 									</div>
 								</div>
 								<div class="row bookDescription">
@@ -1330,6 +1337,13 @@
 											<div class="col-xs-1 col-lg-4"></div>
 											<div class="col-xs-10 col-lg-4">
 												"THE ECHO WITHIN" 365 Showers of Nectar
+											</div>
+											<div class="col-xs-1 col-lg-4"></div>
+										</div>
+										<div class="row">
+											<div class="col-xs-1 col-lg-4"></div>
+											<div class="col-xs-10 col-lg-4">
+												<img src="images/echo_within.png" alt="">	
 											</div>
 											<div class="col-xs-1 col-lg-4"></div>
 										</div>
