--- a/Tadekam.html
+++ b/Tadekam.html
@@ -467,14 +467,84 @@
 						<div class="row textRow">
 							<div class="col-xs-2 col-lg-2"></div>
 							<div class="col-xs-8 col-lg-8">
-								Second Row...For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+								Guruji Naushir came to know of Babaji in 1997 through his first Guru who goes by the name of Yogiraj Mangeshda. Guruji trained under Yogiraj Mangeshda for two years.
 							</div>
 							<div class="col-xs-2 col-lg-2"></div>
 						</div>
 						<div class="row textRow" >
 							<div class="col-xs-2 col-lg-2"></div>
 							<div class="col-xs-8 col-lg-8">
-								Third Row...For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru…..  Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+								In January 2000, Babaji made his first contact with Guruji Naushir. Probably knowing that Guruji is very skeptical by nature and not easily impressed by mediums or spirit communication, Babaji wrote a small note, in English, in His own handwriting and left it on the altar at night. The first words in the note were: "Dear Naush, I am very happy with your work….." and then went on to give him further instructions. From that day onwards a constant flow of communication began coming from Babaji with specific instructions about spreading His spiritual wisdom. Babaji indicated exactly how and through whom He would communicate and send His teachings to Guruji. I have seen these notes with my own eyes. Sometimes the messages would also come for Guruji's own spiritual practices.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								In March 2003, Babaji indirectly led Guruji, through a Sufi saint near Ajmer, to his second Guru, Kundalini Gyan Yogi Avadhoot Shri Govindagiri Swami of Bangalore. Guru and disciple recognized each other instantly and this opened a whole new chapter in Guruji Naushir's life for the next ten years.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								With the grace and love of Shri Govindagiri Swami, Guruji Naushir got the knowledge of Shaktipath and Kundalini Vidhya. For the first time, Swamiji handed down the power and technique required for giving Shaktipath Deeksha. He made Guruji Naushir an authentic Guru and directed him to spread the knowledge about Kundalini yoga. Guruji was now able to give the powerful initiations to activate and regulate Kundalini Shakti.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								From then onwards to the middle of 2009, Guruji Naushir travelled the length and breadth of India and also Dubai in the Middle East, holding seminars to teach Reiki along with the spiritual wisdom he received from Babaji. Those who wanted to go to a higher spiritual level, he would give Shaktipath Deeksha. By now more than five thousand people had attended the programmes conducted by Guruji. In this period he set up his organization called Tad Ekam.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								In 2009 Guruji became very restless and felt the need to do intense tapas. The moment he announced this decision and put his plans in action, Babaji communicated to him how happy He was with this decision and that a new chapter was going to begin. He also gave detailed instructions about the austerities to be observed during tapas. Guruji, being highly focused gave up absolutely everything he was doing and in November 2009 sat in complete seclusion to do meditation with such intensity that it produced immediate results.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								In February 2010, he received a message from Babaji saying, 'You are now ready to see me, but you have to find me and come to me. Do not expect even slightest comfort during your stay.' With only this message and no other clue whatsoever, Guruji began a search to locate Babaji. Guruji roamed the mountains around Badrinath, searching for Babaji in caves in dangerous and remote locations. It was on the day of Buddha Poornima that Guruji met Babaji, 5 kilometers from Badrinath on the road to the Neelkanth peak. Many amazing miracles took place during Guruji's journey and the entire stay in Badrinath. But the crowning moment was his wonderful meeting with Babaji. On returning from Badrinath, Guruji introduced new programmes that encouraged people to do more meditation along with certain Kriyas given by Babaji.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								Then two years later, around January 2012, Guruji kept receiving communication from Babaji saying that he must take further training under a new Guru. Seizing this opportunity, Guruji Naushir decided to request Babaji to become his Guru. A few days later, in September 2012, Babaji communicated back accepting Guruji Naushir as his disciple. Along with that message came a set of 18 stringent conditions. Of course, Guruji was very happy to accept every one of those conditions. Once again a great Master had met a perfect Disciple.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								From January 2013, Guruji Naushir began the second stage of his tapas under Babaji's direct instructions and guidance. This tapas is still going on and even as I write, I have no clue when Guruji's tapas will end and when he will return to his normal activities.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								I have tried to tell Guruji's life-story in minimum words possible. But my greatest joy has been closely watching the interaction between spiritual giants like Babaji and Guruji or Guruji and Govindagiri Swamiji. Particularly exciting for me is the relationship between Babaji and Guruji. It's like watching two champions in a battle of wits, but sprinkled with humor and deep love.
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								Once I asked Guruji that after knowing who Babaji really is and your own true identity, how do you manage to deal with common people with so much love and humility. Guruji replied, "Arrogance does not exist in my being. But assuming such a thought did arise, the very next moment Babaji's face would come before my eyes. Because my own Guru who has unimaginable powers is extremely humble. His only earthly possessions are an old woolen blanket and a pair of worn-out rubber slippers and He chooses to lives in caves or under the open sky. Now tell me on what issue can I even start to become arrogant?"
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row textRow" >
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								To this I can only say TASMAY SHREE GURUVEH NAMAH
 							</div>
 							<div class="col-xs-2 col-lg-2"></div>
 						</div>
