--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@
 										<div class="row">
 											<div class="col-xs-1 col-lg-4"></div>
 											<div class="col-xs-10 col-lg-4">
-												<img src="images/amrit.png" alt="" class="namePhoto">	
+												<img src="images/amrit.png" alt="" class="mediaBooks">	
 											</div>
 											<div class="col-xs-1 col-lg-4"></div>
 										</div>
@@ -1413,7 +1413,7 @@
 										<div class="row">
 											<div class="col-xs-1 col-lg-4"></div>
 											<div class="col-xs-10 col-lg-4">
-												<img src="images/echo_within.png" alt="" class="namePhoto">	
+												<img src="images/echo_within.png" alt="" class="mediaBooks">	
 											</div>
 											<div class="col-xs-1 col-lg-4"></div>
 										</div>
