--- a/Tadekam.html
+++ b/Tadekam.html
@@ -1556,17 +1556,23 @@
 						<div class="col-xs-12 col-lg-8">
 							<div class="col-xs-12 col-lg-3 columnFooterInfoText">
 								<div>
-									<span class="glyphicon glyphicon-earphone"><span class="footerText">+91 9999999999</span></span>
+									<span>
+										<img src="images/call.png"/>
+										<span class="footerText">+91 9999999999</span>
+									</span>
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-5 columnFooterInfoText">
 								<div>
-									<span class="glyphicon glyphicon-envelope"><span class="footerText">babajitadekam@gmail.com</span></span>
+									<span>
+										<img src="images/mail.png"/>
+										<span class="footerText">babajitadekam@gmail.com</span>
+									</span>
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-3 columnFooterInfoText">
 								<div>
-									<span class="footerText">Follow Us<span class="fa fa-facebook-official"></span><span class="fa fa-youtube-play"></span><span class="fa fa-instagram"></span></span>
+									<span class="footerText">Follow Us<span><img src="images/fb.png"/></span><span><img src="images/youtube.png"/></span><span><img src="images/insta.png"/></span></span>
 								</div>
 							</div>
 						</div>
